@@ -116,3 +116,8 @@ Mon Jan 21 18:02:20 2002                        Michael Jennings (mej)
 Don't try this at home.  This package has been discombobulated by
 trained professionals.
 ----------------------------------------------------------------------
+Tue Feb 12 00:03:12 2002                        Michael Jennings (mej)
+
+Please ignore the warnings during compile.  I didn't want to check
+this in just yet, but I kinda broke Eterm and committed it. :(
+----------------------------------------------------------------------
